syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.grpc.demo.models";

message MovieRequest {
  int32 offset = 1;
  int32 count = 2;
  repeated int32 movieIds = 3;
}