syntax = "proto3";
import "MovieRequest.proto";
import "MovieResponse.proto";
option java_multiple_files = true;
option java_package = "com.grpc.demo.service";

service MovieService {

  rpc getMovies(MovieRequest) returns (MovieResponse);
}